--- a/modules/turnos/turnosProfesional.css
+++ b/modules/turnos/turnosProfesional.css
@@ -2,6 +2,20 @@ body{
     background-color:#dee2e6;
   
 }
+
+.container{
+  background-color: yellow;
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+h3{
+  color: black;
+  margin-left: auto;
+  margin-right: auto;
+}
+
  table.dataTable thead {
     background: #007bff;
     color:white;
@@ -13,3 +27,4 @@ body{
   box-shadow: 10px 10px 50px 1px #7c7c81;
   border-radius: 10px;
 }
+
