--- a/modules/turnos/turnosProfesional.css
+++ b/modules/turnos/turnosProfesional.css
@@ -10,8 +10,21 @@ body{
   margin-right: auto;
 }
 
+.container-error {
+  background-color: black;
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 h3{
   color: black;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+h5{
+  color: red;
   margin-left: auto;
   margin-right: auto;
 }
@@ -21,7 +34,7 @@ h3{
     color:white;
 }
 
-.caja{
+.caja {
   /* border: 1px solid; */
   padding: 5px;
   box-shadow: 10px 10px 50px 1px #7c7c81;
