--- a/modules/turnos/turnos.css
+++ b/modules/turnos/turnos.css
@@ -1,6 +1,6 @@
 body{
     /* background-color:#dee2e6; */
-    background-color:red;
+    /* background-color:red; */
 }
  table.dataTable thead {
     background: #007bff;
