--- a/modules/pacientes/pacientes.css
+++ b/modules/pacientes/pacientes.css
@@ -1,5 +1,15 @@
+html {
+  height: 100%;
+}
+
 body{
     background-color:#dee2e6;
+
+    /* background-image: url("./assets/images/imagen-fondo-index.jpg"); */
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center center;
+    background-size: 100%;
   
 }
  table.dataTable thead {
@@ -8,8 +18,21 @@ body{
 }
 
 .caja{
-  /* border: 1px solid; */
-  padding: 5px;
+  border: 1px solid;
+  padding: 15px;
   box-shadow: 10px 10px 50px 1px #7c7c81;
-  border-radius: 10px;
+  border-radius: 20px;
+}
+
+.container {
+  background-color: #DAFBD0;
+  /* display: flex; */
+  justify-content: center;
+  flex-direction: row;
+}
+
+h3 {
+  font-family: sans-serif;
+  color: red;
+  border-bottom: 1px solid rgb(200, 200, 200);
 }
